2011-08-13  hmandevteam  <hmandevteam@gmail.com>

	* Src/MainClass.cs:
	* Languages/en-US.xml:
	* Languages/it-IT.xml:
	* comex-project.csproj:
	* Src/Classes/GlobalObj.cs:
	* Src/Classes/SmartMouse.cs:
	* Properties/AssemblyInfo.cs:
	* Src/Classes/clsEncoding.cs:
	* Src/Classes/ConsoleManager.cs:
	* Src/Gui_Classes/MainWindowClass.cs: 
	- added choice of reader also in console interface
	- added exchange manager class to perform reader communication (it manage two type of reader)

2011-08-13  hmandevteam  <hmandevteam@gmail.com>

	* Src/MainClass.cs:
	* Languages/en-US.xml:
	* Languages/it-IT.xml:
	* comex-project.csproj:
	* Src/Classes/GlobalObj.cs:
	* Src/Classes/ConsoleManager.cs:
	* Src/Gui_Classes/MainWindowClass.cs: - added console
	interface, so user can use gtk gui or console interface to
	exchange commands

2011-08-12  hmandevteam  <hmandevteam@gmail.com>

	* Src/MainClass.cs:
	* comex.exe.config:
	* Src/Classes/Pcsc.cs:
	* Languages/it-IT.xml:
	* Languages/en-US.xml:
	* comex-project.csproj:
	* Src/Classes/GlobalObj.cs:
	* Src/Classes/clsEncoding.cs:
	* Src/Glade_Files/MainWindow.glade:
	* Src/Gui_Classes/MainWindowClass.cs: 
	- first support for PCSC readers cross platform
	- improved gui dynamic creation

2011-08-12  hmandevteam  <hmandevteam@gmail.com>

	* Src/MainClass.cs:
	* Languages/en-US.xml:
	* Languages/it-IT.xml:
	* comex-project.csproj:
	* Src/Classes/GlobalObj.cs:
	* Src/Classes/GlobalConst.cs:
	* Properties/AssemblyInfo.cs:
	* Src/Classes/LanguageManager.cs:
	* Src/Gui_Classes/MainWindowClass.cs: 

	- improved multi language support
